--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reinput": "^3.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
