--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-elements": "^1.2.6",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-reanimated": "^1.3.0",
+    "react-native-screens": "1.0.0-alpha.23",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
