--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.2",
+    "react-native-animatable": "^1.3.3",
     "react-native-app-intro-slider": "^3.0.0",
     "react-native-calendars": "^1.212.0",
     "react-native-elements": "^1.2.6",
