--- a/ios/JacobpMobile/Info.plist
+++ b/ios/JacobpMobile/Info.plist
@@ -74,6 +74,7 @@
 		<string>Roboto_medium.ttf</string>
 		<string>Roboto.ttf</string>
 		<string>rubicon-icon-font.ttf</string>
+		<string>feather1s.ttf</string>
 	</array>
 </dict>
 </plist>
