--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react-native-app-intro-slider": "^3.0.0",
     "react-native-calendars": "^1.212.0",
     "react-native-elements": "^1.2.6",
+    "react-native-feather1s": "^0.2.2",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^11.5.1",
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-snap-carousel": "^3.8.4",
