--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "deprecated-react-native-listview": "^0.0.6",
+    "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.2",
@@ -23,6 +24,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.5.1",
+    "react-native-modal-datetime-picker": "^7.6.0",
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-snap-carousel": "^3.8.4",
