ios splash screen en done

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "JacobpMobile",
-  "displayName": "JacobpMobile"
+  "name": "JacobpMobileAndroidAndIos",
+  "displayName": "JacobpMobileAndroidAndIos"
 }
