--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,8 @@
 platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'JacobpMobile' do
-  # Pods for JacobpMobile
+target 'JacobpMobileAndroidAndIos' do
+  # Pods for JacobpMobileAndroidAndIos
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
@@ -34,13 +34,13 @@ target 'JacobpMobile' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
+
   pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
-  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
-
-  target 'JacobpMobileTests' do
+  target 'JacobpMobileAndroidAndIosTests' do
     inherit! :search_paths
     # Pods for testing
   end
@@ -48,10 +48,10 @@ target 'JacobpMobile' do
   use_native_modules!
 end
 
-target 'JacobpMobile-tvOS' do
-  # Pods for JacobpMobile-tvOS
+target 'JacobpMobileAndroidAndIos-tvOS' do
+  # Pods for JacobpMobileAndroidAndIos-tvOS
 
-  target 'JacobpMobile-tvOSTests' do
+  target 'JacobpMobileAndroidAndIos-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
