--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "JacobpMobile",
+  "name": "JacobpMobileAndroidAndIos",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -14,39 +14,36 @@
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "react": "16.9.0",
-    "react-native": "0.61.2",
+    "react-native": "0.61.4",
     "react-native-animatable": "^1.3.3",
     "react-native-app-intro-slider": "^3.0.0",
     "react-native-calendars": "^1.212.0",
-    "react-native-elements": "^1.2.6",
+    "react-native-elements": "^1.2.7",
     "react-native-feather1s": "^0.2.2",
-    "react-native-gesture-handler": "^1.4.1",
+    "react-native-gesture-handler": "^1.5.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-modal": "^11.5.1",
     "react-native-modal-datetime-picker": "^7.6.0",
-    "react-native-reanimated": "^1.3.0",
-    "react-native-screens": "1.0.0-alpha.23",
-    "react-native-snap-carousel": "^3.8.4",
+    "react-native-reanimated": "^1.4.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-timeline-listview": "^0.2.3",
     "react-native-touchable-scale": "^2.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
-    "react-redux": "^7.1.1",
+    "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "reinput": "^3.7.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/runtime": "^7.6.3",
+    "@babel/core": "^7.7.2",
+    "@babel/runtime": "^7.7.2",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
     "eslint": "^6.6.0",
     "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.56.3",
+    "metro-react-native-babel-preset": "^0.57.0",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
