--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react-native-app-intro-slider": "^3.0.0",
     "react-native-calendars": "^1.212.0",
     "react-native-elements": "^1.2.7",
+    "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-feather1s": "^0.2.2",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^11.5.2",
     "react-native-modal-datetime-picker": "^7.6.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-splash-screen": "^3.2.0",
