--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -179,12 +179,15 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-extra-dimensions-android')
+    implementation project(':react-native-screens')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-splash-screen')
     implementation project(':react-native-reanimated')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02'
+
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
