--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "jetifier -r"
   },
   "dependencies": {
     "deprecated-react-native-listview": "^0.0.6",
@@ -19,7 +20,6 @@
     "react-native-app-intro-slider": "^3.0.0",
     "react-native-calendars": "^1.212.0",
     "react-native-elements": "^1.2.7",
-    "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-feather1s": "^0.2.2",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
@@ -27,6 +27,8 @@
     "react-native-modal": "^11.5.2",
     "react-native-modal-datetime-picker": "^7.6.0",
     "react-native-reanimated": "^1.4.0",
+    "react-native-screens": "^2.0.0-alpha.8",
+    "react-native-snap-carousel": "^3.8.4",
     "react-native-splash-screen": "^3.2.0",
     "react-native-timeline-listview": "^0.2.3",
     "react-native-touchable-scale": "^2.1.0",
@@ -46,6 +48,7 @@
     "babel-jest": "^24.9.0",
     "eslint": "^6.6.0",
     "jest": "^24.9.0",
+    "jetifier": "^1.6.4",
     "metro-react-native-babel-preset": "^0.57.0",
     "react-test-renderer": "16.9.0"
   },
