--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-native-modal": "^11.5.2",
     "react-native-modal-datetime-picker": "^7.6.0",
     "react-native-reanimated": "^1.4.0",
-    "react-native-screens": "^2.0.0-alpha.8",
+    "react-native-screens": "1.0.0-alpha.23",
     "react-native-snap-carousel": "^3.8.4",
     "react-native-splash-screen": "^3.2.0",
     "react-native-timeline-listview": "^0.2.3",
