--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.4",
+    "react-native-action-button": "^2.8.5",
     "react-native-animatable": "^1.3.3",
     "react-native-app-intro-slider": "^3.0.0",
     "react-native-calendars": "^1.212.0",
     "react-native-elements": "^1.2.7",
     "react-native-feather1s": "^0.2.2",
     "react-native-gesture-handler": "^1.5.0",
+    "react-native-gifted-chat": "^0.11.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.5.2",
@@ -39,7 +41,8 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "reinput": "^3.7.1"
+    "reinput": "^3.7.1",
+    "toggle-switch-react-native": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
