--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "react-native-modal": "^11.5.2",
     "react-native-modal-datetime-picker": "^7.6.0",
     "react-native-reanimated": "^1.4.0",
+    "react-native-scaling-drawer": "^1.0.1",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-snap-carousel": "^3.8.4",
     "react-native-splash-screen": "^3.2.0",
     "react-native-timeline-listview": "^0.2.3",
     "react-native-touchable-scale": "^2.1.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.0.10",
+    "react-navigation": "4.0.7",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.3",
