--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   },
   "dependencies": {
     "deprecated-react-native-listview": "^0.0.6",
+    "expo": "^36.0.2",
+    "expo-asset": "^8.0.0",
+    "expo-font": "^8.0.0",
+    "galio-framework": "^0.6.3",
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
+    "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.4",
     "react-native-action-button": "^2.8.5",
@@ -28,6 +33,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.5.2",
     "react-native-modal-datetime-picker": "^7.6.0",
+    "react-native-modal-dropdown": "^0.7.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-scaling-drawer": "^1.0.1",
     "react-native-screens": "1.0.0-alpha.23",
